Fixed bugs on store profile page to stop overlapping

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -16,17 +16,18 @@ html, body {
   font-family: 'Libre Franklin', sans-serif
 }
 
-h1, h2, h3 {
+h1, h2 {
   font-weight: 900;
   color: #F7CE3E;
   margin: 2.5rem 0 2.5rem 0;
   padding-top: 1rem;
 }
 
-h4, h5 {
+h3, h4, h5 {
   font-weight: 900;
   color: #e4e2e2;
   margin: 0;
+  padding: 1rem 0 1rem 0;
 }
 
 h1 {
@@ -38,7 +39,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
 }
 
 h4 {
@@ -114,7 +115,8 @@ span {
 }
 
 form {
-  width: 100%;
+  width: 70%;
+  margin: auto;
   text-align: left;
   padding: 1rem;
 }
@@ -226,12 +228,6 @@ label {
 
 /* LOGIN & REGISTER */
 
-.login, .register {
-  width: 80%;
-  margin: auto;
-  border: none;
-}
-
 .login button, .register button {
   margin-left: 0;
 }
@@ -265,7 +261,7 @@ fieldset {
 /* STORE */
 
 .storeprofile {
-  margin-top: 3rem;
+  margin-top: 2rem;
 }
 
 .storeInfo {
@@ -278,10 +274,14 @@ fieldset {
   margin-bottom: 0;
   color: #e4e2e2;
 }
+.storeInfo h5 {
+  padding: 0;
+}
 
 .storeInfo .button {
   width: 6rem;
   height: 2rem;
+  font-size: 0.8rem;
 }
 
 .store-balance {
@@ -304,7 +304,7 @@ fieldset {
   padding: 2.5rem 2rem 0.5rem 2rem;
   color: #1a2930;
   z-index: 2;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: 900;
   line-height: 1.4rem;
 }
@@ -339,18 +339,75 @@ fieldset {
   border: none;
 }
 
+.StoreInfoEdit .button {
+  margin-left: 0;
+  margin-right: 2rem;
+}
+
+/* STORE REDEMPTION */
+
+.store-redemption {
+  width: 90%;
+  background-color: #e4e2e2; 
+  margin: auto;
+  margin-top: 1rem;
+  padding: 1rem;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.store-redemption form {
+  width: 90%;
+  padding: 0;
+  margin: auto;
+  margin-bottom: 1rem;
+}
+
+.store-redemption fieldset {
+  width: 100%;
+  margin: auto;
+}
+
+.store-redemption h4 {
+  text-align: center;
+  color: #1a2930;
+}
+
+.store-redemption label {
+color: #1a2930;
+}
+
+.redeem-buttons {
+  display: flex;
+  width: 80%;
+  margin: auto;
+  justify-content: space-between;
+}
+
+.store-redemption .button {
+  width: 6rem;
+  height: 2rem;
+  font-size: 0.8rem;
+}
+
 /* STORE STATS */
 
 .stats {
-  padding: 0;
+  padding-top: 2rem;
   width: 95%;
   margin: auto;
   background-color: #314950;
 }
 
-.recharts-wrapper {
-  width: 95%;
+.stats h3 {
+  width: 60%;
   margin: auto;
+  text-align: center;
+}
+
+.recharts-wrapper, .recharts-responsive-container {
+  width: 90%;
+  margin: auto;
+  max-width: 1100px;
 }
 
 /* DONATIONS */
@@ -441,13 +498,12 @@ fieldset {
   color: #e4e2e2;
 }
 
-
-
 /* FOOTER */
 
 .footer {
   width: 100%;
   margin: 0;
+  margin-top: 3rem;
   background-color: #1a2930;
   color: #e4e2e2;
   padding: 2rem;
@@ -455,7 +511,6 @@ fieldset {
 
 .footer h4 {
   color: #F7CE3E;
-  margin-bottom: 0.5rem;
 }
 
 .footer p {
@@ -492,6 +547,9 @@ fieldset {
 }
 
 @media only screen and (min-width: 500px) {
+  form {
+    width: 60%;
+  }
   .logo {
     width: 50%;
     top: 15%;
@@ -578,6 +636,7 @@ fieldset {
     margin-top: 2rem;
     margin-bottom: 3rem;
   }
+ 
   .companyList {
     font-size: 1.2rem;
   }
@@ -601,12 +660,71 @@ fieldset {
   .logo {
     top: 10%;
   }
-  .footer {
-    width: 100%;
+  .storeprofile {
     position: relative;
-    bottom: 0;
+    width: 100%;
+    height: 1300px;
+  }
+  .storeInfo {
+    position: absolute;
+    font-size: 150%;
+    left: 10%;
+    margin-top: 1rem;
+    width: 25%;
     text-align: left;
-  } 
+  }
+  .storeInfo h3 {
+    font-size: 120%;
+  }
+  .storeInfo p {
+    font-size: 1.3rem;
+  }
+  .storeInfo .button {
+    width: 7rem;
+    height: 2.5rem;
+    margin-left: 0;
+    margin-top: 2rem;
+  }
+  .store-balance {
+    position: absolute;
+    right: 10%;
+    width: 50%;
+  }
+  .total-balance {
+    width: 250px;
+    height: 250px;
+  }
+  .total-balance p {
+    padding-top: 3rem;
+    font-size: 1.6rem;
+    line-height: 2rem;
+  }
+  .total-balance span {
+    font-size: 3rem;
+  }
+  .store-balance-buttons {
+    margin: auto;
+    margin-top: 4rem;
+    margin-bottom: 8rem;
+  }
+  .redeem .button, .donation .button {
+    width: 10rem;
+    height: 4rem;
+    font-size: 120%;
+    margin-bottom: 2rem;
+  }
+  .store-redemption {
+    width: 50%;
+    float: right;
+    margin: 2.5rem;
+  }
+  .stats {
+    position: absolute;
+    bottom: 0;
+  }
+  .store-balance {
+    width: 60%;
+  }
   .companyList {
     width: 80%;
     margin: auto;
@@ -617,6 +735,12 @@ fieldset {
   .companyList td, .companyList th {
     padding: 15px;
   }
+  .footer {
+    width: 100%;
+    position: relative;
+    bottom: 0;
+    text-align: left;
+  } 
 }
 
 @media only screen and (min-width: 900px) {
@@ -658,10 +782,6 @@ fieldset {
     width: 60%;
     margin: auto;
   }
-  .total-balance {
-    width: 250px;
-    height: 250px;
-  }
   .total-balance p {
     padding: 3.5rem 2rem 0.5rem 2rem;
     font-size: 1.3rem;
@@ -678,6 +798,8 @@ fieldset {
   .companyList td, .companyList th {
     padding: 17px;
   }
+  .recharts-wrapper, .recharts-responsive-container {
+    width: 75%;
 }
 
 @media only screen and (min-width: 1088px) {
@@ -695,59 +817,6 @@ fieldset {
   }
   .map { 
     height: 500px; 
-  }
-  .storeprofile {
-    position: relative;
-    width: 100%;
-    height: 1300px;
-  }
-  .storeInfo {
-    position: absolute;
-    font-size: 150%;
-    left: 15%;
-    margin-top: 5rem;
-    width: 25%;
-    text-align: left;
-  }
-  .storeInfo h3 {
-    font-size: 130%;
-  }
-  .storeInfo .button {
-    width: 7rem;
-    height: 2.5rem;
-    margin-left: 0;
-    margin-top: 2rem;
-  }
-  .store-balance {
-    position: absolute;
-    right: 15%;
-    width: 50%;
-  }
-  .total-balance {
-    width: 380px;
-    height: 380px;
-  }
-  .total-balance p {
-    padding-top: 6rem;
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-  .total-balance span {
-    font-size: 3rem;
-  }
-  .store-balance-buttons {
-    margin: auto;
-    margin-top: 8rem;
-    margin-bottom: 8rem;
-  }
-  .redeem .button, .donation .button {
-    width: 10rem;
-    height: 4rem;
-    font-size: 140%;
-  }
-  .stats {
-    position: absolute;
-    bottom: 0;
   }
   .TotalStats {
     text-align: center;
@@ -822,6 +891,11 @@ fieldset {
 }  
 
 @media only screen and (min-width: 1400px) {
+  .storeprofile {
+    max-width: 80%;
+    margin: auto;
+    margin-top: 4rem;
+  }
   .navbar{
     height: 8rem;
   }
